# lpc176x5x-hal

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
examples/: blinky.rs
src/: clocks.rs  gpio.rs  lib.rs
