[package]
name = "lpc176x5x-hal"
version = "0.1.0"
edition = "2024"
authors = ["Marshall Hunt <marshallhunt@live.com>"]
description = "Hardware Abstraction Layer for the NXP LPC176x5x series microcontrollers."
license = "MIT"
repository = "https://github.com/MarshTheBacca/lpc176x5x-hal"
keywords = ["arm", "cortex-m", "lpc176x5x", "hal", "embedded"]
categories = ["embedded", "no-std"]
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
lpc176x5x-pac = { version = "0.1.1", features = ["critical-section"] }
embedded-hal = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
nb = "1.1.0"
